Closed Bug 120049 Opened 23 years ago Closed 23 years ago

nsRDFXMLSerializer.cpp writes '<RDF:lifoobar</RDF:li>; corrupt localstore.rdf

Categories

(Core Graveyard :: RDF, defect)

defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jrgmorrison, Assigned: waterson)

References

Details

(Keywords: smoketest)

Attachments

(1 file)

waterson: oops in nsRDFXMLSerializer.cpp

Steps to reproduce:
1) delete or move your localstore.rdf out of the way (makes it easy 
   to see what the error is).
2) start mozilla
3) type 'bugzilla.mozilla.org' in the urlbar and hit enter
4) quit mozilla
5) copy localstore.rdf to foo.xml and load it in mozilla

Actual results: well-formedness error because of this fragment

  <RDF:Seq about="nc:urlbar-history">
    <RDF:libugzilla.mozilla.org</RDF:li>
  </RDF:Seq>

Note that "<RDF:li" has no closing angle bracket.

This, of course, leaves the localstore.rdf in a corrupted state for 
all users once they have typed a url in the url bar, and persistence
is broken till they remove localstore.rdf (or create a new profile).

It would be good if this was checked in before tomorrow morning's 
daily builds so we don't hork everyone's localstore. I'll attach 
a patch (very "When in Rome"-style :-). It seems like it has to be 
the right thing to do, but I know nothing about this code. cc: a 
few people who do (or might) and hope that if waterson isn't around
one of them can give it an OK (or N-OK) and check it in.
Severity: normal → blocker
Keywords: smoketest
Comment on attachment 64995 [details] [diff] [review]
patch to close the opening '<RDF:li' before adding the literal to stream

sr=ben@netscape.com
Attachment #64995 - Flags: superreview+
Comment on attachment 64995 [details] [diff] [review]
patch to close the opening '<RDF:li' before adding the literal to stream

r=sspitzer
Attachment #64995 - Flags: review+
fixed.  thanks to quick action by jrgm, I think a hellish morning was averted.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 120039 has been marked as a duplicate of this bug. ***
*** Bug 120082 has been marked as a duplicate of this bug. ***
*** Bug 120085 has been marked as a duplicate of this bug. ***
If you have been victimized by this bug, do the following:

1. Close Mozilla.
2. In a text editor, open the file localstore.rdf in the affected profile 
   directory. Save the file.
3. Replace all occurrences of <RDF:li with <RDF:li>. (That is, 
   put in all of the missing closing brackets.)

This fix undid my problem. The problem will recur until you have upgraded to a
newer version of Mozilla.
*** Bug 119509 has been marked as a duplicate of this bug. ***
*** Bug 120059 has been marked as a duplicate of this bug. ***
*** Bug 120250 has been marked as a duplicate of this bug. ***
*** Bug 120336 has been marked as a duplicate of this bug. ***
*** Bug 120613 has been marked as a duplicate of this bug. ***
tever is not RDF QA anymore
QA Contact: tever → nobody
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: