fix for blocker bug #120049.  corrupting localstore.rdf. thanks to jrgm@netscape.com for the patch, this will make tomorrow a lot less painful.  r=sspitzer, sr=ben